--- a/WeatherAppIOS/Base.lproj/Main.storyboard
+++ b/WeatherAppIOS/Base.lproj/Main.storyboard
@@ -92,12 +92,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" searchBarStyle="minimal" text="" translatesAutoresizingMaskIntoConstraints="NO" id="8Yx-i8-JaO">
-                                <rect key="frame" x="32" y="94" width="350" height="180.5"/>
+                                <rect key="frame" x="32" y="74" width="350" height="51"/>
                                 <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="cGx-ZV-HIO">
-                                <rect key="frame" x="100" y="274.5" width="214" height="50.5"/>
+                                <rect key="frame" x="100" y="150" width="214" height="50.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LONDON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JvT-zD-3l6">
                                         <rect key="frame" x="0.0" y="0.0" width="214" height="28.5"/>
@@ -114,7 +114,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="iya-ci-wzB">
-                                <rect key="frame" x="32" y="345" width="350" height="117"/>
+                                <rect key="frame" x="32" y="230.5" width="350" height="117"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="i1L-AR-CNN">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="117"/>
@@ -143,22 +143,21 @@
                         <viewLayoutGuide key="safeArea" id="eLe-T6-NYp"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="iya-ci-wzB" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="32" id="3T1-2N-2yt"/>
-                            <constraint firstAttribute="trailing" secondItem="iya-ci-wzB" secondAttribute="trailing" constant="32" id="5B0-Lx-tfq"/>
-                            <constraint firstItem="eLe-T6-NYp" firstAttribute="trailing" secondItem="8Yx-i8-JaO" secondAttribute="trailing" constant="32" id="8aS-ZS-MYa"/>
-                            <constraint firstItem="eLe-T6-NYp" firstAttribute="bottom" secondItem="iya-ci-wzB" secondAttribute="bottom" constant="400" id="IsD-IM-Ohk"/>
-                            <constraint firstItem="8Yx-i8-JaO" firstAttribute="top" secondItem="eLe-T6-NYp" secondAttribute="top" constant="50" id="QIr-BG-T2h"/>
-                            <constraint firstItem="eLe-T6-NYp" firstAttribute="trailing" secondItem="cGx-ZV-HIO" secondAttribute="trailing" constant="100" id="ac1-DG-Ukm"/>
-                            <constraint firstItem="cGx-ZV-HIO" firstAttribute="top" secondItem="8Yx-i8-JaO" secondAttribute="bottom" symbolic="YES" id="fAT-Pc-QuA"/>
-                            <constraint firstItem="cGx-ZV-HIO" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="100" id="i8F-CY-hxJ"/>
-                            <constraint firstItem="iya-ci-wzB" firstAttribute="top" secondItem="cGx-ZV-HIO" secondAttribute="bottom" constant="20" id="ivK-fX-wiG"/>
-                            <constraint firstItem="8Yx-i8-JaO" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="32" id="zay-wk-YZU"/>
+                            <constraint firstItem="eLe-T6-NYp" firstAttribute="trailing" secondItem="8Yx-i8-JaO" secondAttribute="trailing" constant="32" id="0Zo-Jo-moA"/>
+                            <constraint firstItem="cGx-ZV-HIO" firstAttribute="top" secondItem="8Yx-i8-JaO" secondAttribute="bottom" constant="25" id="7oW-qm-FLc"/>
+                            <constraint firstItem="iya-ci-wzB" firstAttribute="top" secondItem="cGx-ZV-HIO" secondAttribute="bottom" constant="30" id="AOW-0Q-6QW"/>
+                            <constraint firstItem="8Yx-i8-JaO" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="32" id="P87-Cs-KJf"/>
+                            <constraint firstItem="eLe-T6-NYp" firstAttribute="trailing" secondItem="iya-ci-wzB" secondAttribute="trailing" constant="32" id="Qrp-sE-0Ic"/>
+                            <constraint firstItem="eLe-T6-NYp" firstAttribute="trailing" secondItem="cGx-ZV-HIO" secondAttribute="trailing" constant="100" id="Sil-L0-2ru"/>
+                            <constraint firstItem="8Yx-i8-JaO" firstAttribute="top" secondItem="lCN-EG-XOB" secondAttribute="topMargin" constant="30" id="gly-9K-h8v"/>
+                            <constraint firstItem="cGx-ZV-HIO" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="100" id="pIc-mC-rFX"/>
+                            <constraint firstItem="iya-ci-wzB" firstAttribute="leading" secondItem="eLe-T6-NYp" secondAttribute="leading" constant="32" id="vpM-if-rfU"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IIT-lU-YNS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="685.50724637681162" y="63.616071428571423"/>
+            <point key="canvasLocation" x="749" y="64"/>
         </scene>
     </scenes>
     <resources>
